tests/ui/concurrent_cached_sync_lock_unsupported.rs
use cached::macros::concurrent_cached;

#[concurrent_cached(sync_lock = "mutex")]
fn f(x: i32) -> i32 {
    x
}

fn main() {}
